# h5pulsar

./: .gitignore  AUTHORS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: codecov.yml
.github/workflows/: ci_test.yml
h5pulsar/: __init__.py  derivative_file.py  h5format.py  h5pulsar.py  pulsar.py
tests/: test_derivative_file.py  test_h5format.py
