[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "h5pulsar"
dynamic = ["version"]
authors = [
    {name="Rutger van Haasteren", email="rutger@vhaasteren.com"},
]
description = "HDF5 read/write capabilities for Enterprise Pulsar objects"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vhaasteren/h5pulsar"
"Bug Tracker" = "https://github.com/vhaasteren/h5pulsar/issues"

[tool.setuptools_scm]
write_to = "h5pulsar/_version.py"
write_to_template = "__version__ = '{version}'"
